contractOptions in progress