@@ -3,16 +3,17 @@ package ecare.service;
 import ecare.dto.TariffDto;
 import ecare.model.Option;
 import ecare.model.Tariff;
-import ecare.repository.OptionRepository;
+
 import ecare.repository.TariffRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import javax.ws.rs.NotFoundException;
-import java.util.ArrayList;
+
+import java.io.Serializable;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class TariffService {
@@ -21,26 +22,22 @@ public class TariffService {
     TariffRepository tariffRepository;
 
     @Autowired
-    OptionRepository optionRepository;
-
-    @Autowired
     private ModelMapper modelMapper;
 
     public List<TariffDto> getAllTariffs() {
         List<Tariff> tariffEntities = tariffRepository.findAll();
-        return tariffEntities.stream().map(this::convertToDto).toList();
+        return tariffEntities.stream().map(this::convertToDto).collect(Collectors.toList());
     }
 
-    public TariffDto getById(Long id) throws NotFoundException {
+    public TariffDto getById(Long id) throws Exception {
         Optional<Tariff> tariffEntity = tariffRepository.findById(id);
         if (tariffEntity.isPresent()) {
-
-            //    optionRepository.findAllById(tariffEntity.get().getTariffOptions())
             return convertToDto(tariffEntity.get());
         } else {
-            throw new NotFoundException("Error 404 Not found");
+            throw new Exception("Error 404 Not found");
         }
     }
+
 
 
     public Tariff addTariff(TariffDto tariffDto) {
@@ -58,8 +55,6 @@ public class TariffService {
 
     private TariffDto convertToDto(Tariff tariffEntity) {
         TariffDto tariff = modelMapper.map(tariffEntity, TariffDto.class);
-        // Set<Option> options = tariffEntity.getTariffOptions();
-        //  List<OptionDto> options = (.stream().map(modelMapper.map(x, OptionDto.class)) );
         return tariff;
     }
 
